--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <div class="container-3">
-        <h2>Rock, Paper, Scissors</h2>
+        <h1>Rock, Paper, Scissors</h1>
         <hr>
+        <h4 style="padding-bottom: 20px;">Click on icons to play</h4>
         <div class="flex-box-rps" id="flex-box-rps-div">
             <img id="rock" src="https://images.clipartpanda.com/rock-clipart-clipart-harvestable-resources-rock.png" alt="rock" height="150" width="150" onclick="rpsGame(this)">
             <img id="paper" src="https://images.clipartpanda.com/paper-clipart-nexxuz-Loose-Leaf-Paper.png" alt="paper" height="150" width="150" onclick="rpsGame(this)">
